# node_project

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  node_type.cpp  node_type.hpp
